Fix horizontal scrollbar displaying when it shouldn't.
Changing the way that the central <pre> block is centered. Now use "display:
table" combined with "margin: 0 auto".

--- a/gae/static/vim-stylesheet.css
+++ b/gae/static/vim-stylesheet.css
@@ -2,9 +2,9 @@ body { font-family: georgia, palatino, serif }
 
 pre { font-size: 11pt }
 
-#d1 { float: left; position: relative; left: 50% }
-#d2 { float: left; position: relative; left: -50% }
-#d3 { float: left; position: absolute; top: 0 }
+#d1 { position: relative; display: table; margin: 0 auto }
+#d2 { position: absolute; top: inherit }
+#footer { font-size: 85%; padding-top: 1em }
 
 /* hidden links */
 a.d:link, a.d:visited { color: rgb(0,0,0); text-decoration: none; }
